--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f60dbfc3e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f628d662d10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f60dc58ca10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f60dc58cc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f628d2bfb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f628d2e0d50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f60dcb40450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f60dcb40650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f628d884410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f628d88e650&gt;]</pre>
 </div>
 
 </div>
