--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f03edbeecd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a2e1016d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f03ed5b2a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f03ed5b2c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a2ddbcb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a2ddbcd90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f03edb673d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f03edb675d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a2e370490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a2e370690&gt;]</pre>
 </div>
 
 </div>
