--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a2e1016d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7b1e8a5390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a2ddbcb90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a2ddbcd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b1e5aab10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7b1e5aad10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a2e370490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0a2e370690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7b1eb50490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7b1eb50690&gt;]</pre>
 </div>
 
 </div>
