--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3c5daa29d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb96a828d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c5e07fa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c5e07fc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb966bc710&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb966df9d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3c5e630310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3c5e630510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb96c8a090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbb96c96390&gt;]</pre>
 </div>
 
 </div>
