--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb96a828d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f031a4f0f50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb966bc710&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb966df9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03196fa9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f03196fabd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb96c8a090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb96c96390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0319ca0390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0319ca0590&gt;]</pre>
 </div>
 
 </div>
