--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc52ab06c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a2b205410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc52a49ac90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc52a49c950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a2ae52890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a2ae52a90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc52aa33550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc52aa51210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a2b408210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1a2b408410&gt;]</pre>
 </div>
 
 </div>
