--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a2b205410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe11e72ff50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a2ae52890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a2ae52a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe11e39f950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe11e39fb50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a2b408210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a2b408410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe11e9532d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe11e9534d0&gt;]</pre>
 </div>
 
 </div>
