--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f26252cc410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8995ece890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2624f29910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2624f29b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8995be1790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8995bfaad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f26254df1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f26254df3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89961e3f90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89961ad490&gt;]</pre>
 </div>
 
 </div>
