--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6cfd922590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a542f76d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6cfd593b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6cfd593d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a53f60b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a53f58a10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6cfdb39410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6cfdb39610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a54572a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a5450e5d0&gt;]</pre>
 </div>
 
 </div>
