--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6681e4db90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f85b16bf3d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6681aa99d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6681aa9c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85b1c8b9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85b1c8bbd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f668205d390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f668205d5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f85b22452d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f85b22454d0&gt;]</pre>
 </div>
 
 </div>
