--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe2dc383210&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4059f6b990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe2dc08fa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe2dc08fc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4059bbb890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4059bbba90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe2dc641390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe2dc641590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f405a16d250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f405a16d450&gt;]</pre>
 </div>
 
 </div>
