--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcba3129f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f06df0ea510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcba310bed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcba310b550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f06df6a2550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f06df6b7990&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcba36c4110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcba36c4310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f06dfc61090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f06dfc6c350&gt;]</pre>
 </div>
 
 </div>
