--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f06df0ea510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f92a12befd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06df6a2550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06df6b7990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92a0fe1910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92a0fe1b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f06dfc61090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f06dfc6c350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f92a1594210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f92a1594410&gt;]</pre>
 </div>
 
 </div>
