--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f90717726d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0aab24db90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9071105a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9071105c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0aaaea5b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0aaaea5d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f90716b8310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f90716b8510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0aab44c4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0aab44c6d0&gt;]</pre>
 </div>
 
 </div>
