--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff7d7af6f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f34d2db5490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7d80a2910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff7d80c6d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f34d33678d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f34d3379b50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff7d86661d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff7d8671610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f34d3928210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f34d3933490&gt;]</pre>
 </div>
 
 </div>
