--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8cbacb2190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff16cc76a10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cba66f910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8cba66fb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff16c8dea10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff16c8dec10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8cbac24250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8cbac24450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff16ce8c350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff16ce8c550&gt;]</pre>
 </div>
 
 </div>
