--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b51f72390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9759d60490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b51bf0ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b51bf0cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f975a336cd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f975a336ed0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b52196410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b52196610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f975a8dc610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f975a8dc810&gt;]</pre>
 </div>
 
 </div>
