--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e4ffd09d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd4ca5a4890&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e4fc26ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e4fc26cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4ca209890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4ca209a90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e501da410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e501da610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4ca7bc250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4ca7bc450&gt;]</pre>
 </div>
 
 </div>
