--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbb458cd090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe20ee32c10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb45507690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb4552db50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe20eaeca10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe20eaecc50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbb45acbf50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbb45adf450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe20f09e350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe20f09e590&gt;]</pre>
 </div>
 
 </div>
