--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcfd9a5eed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efeb38bf410&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd96c0a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfd96c0c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efeb3283ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efeb3283cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd9c6f390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfd9c6f590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efeb38293d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efeb38295d0&gt;]</pre>
 </div>
 
 </div>
