--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6ff7ed1d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1940921d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ff84b3950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ff84b3b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc19466fb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc19466f9d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6ff8a63310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6ff8a63510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc194c1c410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc194c1c290&gt;]</pre>
 </div>
 
 </div>
