--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49c6917cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5baffe14d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49c658a990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49c658ab90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bafc51990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5bafc51b90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49c6b3b310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49c6b3b510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bb0206210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5bb0206410&gt;]</pre>
 </div>
 
 </div>
