--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb5d102a1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7292689ed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5d0c9aad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5d0c9acd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f72922eea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f729202a290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb5d1247390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb5d1247590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f72928fadd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f72928a7590&gt;]</pre>
 </div>
 
 </div>
