--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa5852c8910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5113be5c50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa584ef6b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa584f21cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f51138a19d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f51138a1bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5854be4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa5854c9610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5113e552d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5113e554d0&gt;]</pre>
 </div>
 
 </div>
