--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2b38ea5290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe510a80e10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b38e5a910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b38e5ab10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe5106f3990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe5106f3b90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2b39410250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2b39410450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe510ca4390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe510ca4590&gt;]</pre>
 </div>
 
 </div>
