--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9d2ae06d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fab88b3d750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d2b6bfc90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9d2b3ddcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fab89113b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fab89113d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9d2b982350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9d2b9ce3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fab896b94d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fab896b96d0&gt;]</pre>
 </div>
 
 </div>
