--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa730c004d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3cfacf5710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa730848890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa730848a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3cf9e26b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3cf9e26d10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa730e02250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa730e02450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3cfa3ca690&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3cfa3ca890&gt;]</pre>
 </div>
 
 </div>
