--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f485b8d5f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f163c86bd10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f485bebcb10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f485be8c610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f163c4c6a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f163c4c6c50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f485c44eed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f485c4625d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f163ca7c310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f163ca7c510&gt;]</pre>
 </div>
 
 </div>
