--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f21c7eec110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f36921cc090&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21c7bd6850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21c7bfed10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f36912f2890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f36912f2ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f21c819a1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f21c81a5690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f36918a6150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f36918a6390&gt;]</pre>
 </div>
 
 </div>
