--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffa5fb4bb10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8e9810310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa5f518b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa5f518d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8e9541950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8e9541b50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffa5fabe490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffa5fabe690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8e9af9390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8e9af9590&gt;]</pre>
 </div>
 
 </div>
