--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb6ebdba4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b0400d390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb6eba20910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb6eba20b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b045d88d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b045d8ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb6ebfda250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb6ebfda450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b04b8d1d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6b04b8d3d0&gt;]</pre>
 </div>
 
 </div>
