--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1e4353450&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f97c9007f90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1e4057950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc1e4057b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f97c89e0a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f97c89e0c90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1e460a2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc1e460a4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f97c8f88310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f97c8f88550&gt;]</pre>
 </div>
 
 </div>
