--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f253f550190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4490e58910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f253f1caa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f253f1cac90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f448ffc6890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f448ffc6a90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f253f77a410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f253f77a610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f449057b210&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f449057b410&gt;]</pre>
 </div>
 
 </div>
