--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb8ff01510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fede3c85c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb8f026750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb8f026990&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fede3987850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fede3987a90&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb8f5db090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdb8f5db2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fede3f3b290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fede3f3b4d0&gt;]</pre>
 </div>
 
 </div>
