--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b18da8ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc57a060710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b196d3410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b19374c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc57923cb10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc57923cd10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b19970390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0b19924610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc5797e9450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc5797e9650&gt;]</pre>
 </div>
 
 </div>
