--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcec72b3bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f40db182fd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcec6c74a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcec6c74c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40da1e3910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40da1e3b10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcec7226490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcec7226690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f40da795310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f40da795510&gt;]</pre>
 </div>
 
 </div>
