--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9e5190e590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f13ba997390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e51ed7990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e51ed7b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f13b9afc650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f13b9afc890&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9e5248c2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9e5248c4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f13ba0ba050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f13ba0ba290&gt;]</pre>
 </div>
 
 </div>
