--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f56e003eb50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe734474d90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f56e008b1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f56e008b3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7341462d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7341464d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f56e0922b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f56e0922d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7349c8b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7349c8d10&gt;]</pre>
 </div>
 
 </div>
