--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f019c517f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe4a01db190&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f019c1f9090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f019c1f9290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe49f8aa110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe49f8aa310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f019ca92a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f019ca92c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe4a0120950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe4a0120b50&gt;]</pre>
 </div>
 
 </div>
